aplacc/tests/failing/test19.tail
let v0:Si(5) = 5 in
let v1:Sh(2) = [v0,30] in
let v3:[int]2 = each{[int,int],[2]}(fn v2:[int]0 => addi(negi(1),v2),reshape{[int],[1,2]}(v1,iotaSh(2))) in
let v4:[int]2 = transp{[int],[2]}(v3) in
let v5:Sh(3) = catSh(dropSh(1,shape{[int],[2]}(v4)),shape{[int],[2]}(v3)) in
let v6:[int]0 = subi(firstSh(shapeSh(shape{[int],[2]}(v3))),1) in
let v7:Sh(3) = iotaSh(firstSh(shapeSh(v5))) in
let v8:Sh(3) = catSh(rotateSh(v6,dropSh(~1,v7)),takeSh(~1,v7)) in
let v9:[int]3 = transp2{[int],[3]}(v8,reshape{[int],[2,3]}(v5,v3)) in
let v10:Sh(3) = catSh(dropSh(~1,shape{[int],[2]}(v3)),shape{[int],[2]}(v4)) in
let v11:Si(2) = firstSh(shapeSh(shape{[int],[2]}(v3))) in
let v12:Sh(3) = iotaSh(firstSh(shapeSh(v10))) in
let v13:Sh(1) = dropSh(negi(v11),rotateSh(v11,iotaSh(firstSh(shapeSh(v12))))) in
let v14:Sh(3) = catSh(dropSh(~1,iotaSh(v11)),snocSh(v13,v11)) in
let v15:[int]3 = transp2{[int],[3]}(v14,reshape{[int],[2,3]}(v10,v4)) in
let v20:[int]2 = reduce{[int],[2]}(addi,0,zipWith{[int,int,int],[3]}(muli,v9,v15)) in
let v21:Sh(2) = [v0,v0] in
let v23:[int]2 = each{[int,int],[2]}(fn v22:[int]0 => addi(negi(1),v22),reshape{[int],[1,2]}(v21,iotaSh(2))) in
let v24:Sh(3) = catSh(dropSh(1,shape{[int],[2]}(v20)),shape{[int],[2]}(v23)) in
let v25:[int]0 = subi(firstSh(shapeSh(shape{[int],[2]}(v23))),1) in
let v26:Sh(3) = iotaSh(firstSh(shapeSh(v24))) in
let v27:Sh(3) = catSh(rotateSh(v25,dropSh(~1,v26)),takeSh(~1,v26)) in
let v28:[int]3 = transp2{[int],[3]}(v27,reshape{[int],[2,3]}(v24,v23)) in
let v29:Sh(3) = catSh(dropSh(~1,shape{[int],[2]}(v23)),shape{[int],[2]}(v20)) in
let v30:Si(2) = firstSh(shapeSh(shape{[int],[2]}(v23))) in
let v31:Sh(3) = iotaSh(firstSh(shapeSh(v29))) in
let v32:Sh(1) = dropSh(negi(v30),rotateSh(v30,iotaSh(firstSh(shapeSh(v31))))) in
let v33:Sh(3) = catSh(dropSh(~1,iotaSh(v30)),snocSh(v32,v30)) in
let v34:[int]3 = transp2{[int],[3]}(v33,reshape{[int],[2,3]}(v29,v20)) in
let v39:[int]2 = reduce{[int],[2]}(maxi,~2147483648,zipWith{[int,int,int],[3]}(muli,v28,v34)) in
i2d(reduce{[int],[0]}(addi,0,reduce{[int],[1]}(addi,0,v39)))
